# flake8-airflow

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dev-requirements.in  dev-requirements.txt  flake8_airflow.py  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: ci.yaml  sast.yaml
flake8_airflow/: checker.py
tests/: test_flake8_airflow.py
