[wheel]
universal = 1

[metadata]
name = flake8-airflow
summary = Flake8 extension for Apache Airflow static analysis rules.
author = Bradley Bonitatibus
author_email = bradleybonitatibus@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
keywords = airflow, flake8, static-analysis
python_requires = >=3.7
package_dir = flake8_airflow

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.7
packages = find:
setup_requires =
    setuptools
    wheel

install_requires =
    flake8~=5.0

[options.packages.find]
include =
    flake8_airflow*

[options.entry_points]
flake8.extension =
    'AA10 = flake8_airflow:AirflowChecker'

[bdist_wheel]
python-tag=py3
