[metadata]
name = flake8-airflow
summary = Flake8 extension for Apache Airflow static analysis rules.
author = Bradley Bonitatibus
author_email = bradleybonitatibus@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

keywords = airflow, flake8, static-analysis
python_requires = >=3.9
version = 0.1.0

[options]
zip_safe = False
python_requires = ~=3.9
py_modules = flake8_airflow

install_requires =
    flake8>=5.0

[options.entry_points]
flake8.extension =
    AA=flake8_airflow:Plugin

[bdist_wheel]
universal = True
python-tag = py3
