# Copyright 2022 Bradley Bonitatibus

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = flake8-airflow
summary = Flake8 extension for Apache Airflow static analysis rules.
author = Bradley Bonitatibus
author_email = bradleybonitatibus@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

keywords = airflow, flake8, static-analysis
python_requires = >=3.9
version = 0.1.1
url = https://github.com/bradleybonitatibus/flake8-airflow

[options]
zip_safe = False
python_requires = ~=3.9
py_modules = flake8_airflow

install_requires =
    flake8>=5.0

[options.entry_points]
flake8.extension =
    AA=flake8_airflow:Plugin

[bdist_wheel]
universal = True
python-tag = py3
